<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <TableRow>

        <ImageView
            android:id="@+id/imageInside"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/imgDescription" />


    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/txtInside"
            android:textColor="#FDFDFD"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <ImageView
            android:id="@+id/imageRooms"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/imgDescription" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/txtRooms"
            android:textColor="#FDFDFD"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btnSite"
            android:layout_marginTop="10dp"
            android:layout_width="10dp"
            android:layout_height="50dp"
            android:text="@string/btnMore" />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btnBook"
            android:layout_marginTop="10dp"
            android:layout_width="10dp"
            android:layout_height="50dp"
            android:text="@string/btnBook" />
    </TableRow>
</TableLayout>